[package]
authors = ["Fausto Núñez Alberro <fausto.nunez@mailbox.org>"]
categories = ["web-programming"]
description = "This crate provides deserialize for GraphQL configs following the graphql-config specification"
keywords = ["graphql", "web", "graphql-config"]
license = "Apache-2.0 OR MIT"
name = "graphql-config"
repository = "https://github.com/brainlessdeveloper/graphql-config"
version = "0.1.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
maplit = "1.0"

[badges]
travis-ci = { repository = "brainlessdeveloper/graphql-config" }